--- a/JobAdsCheckoutSystem/JobAdsCheckoutSystem.csproj
+++ b/JobAdsCheckoutSystem/JobAdsCheckoutSystem.csproj
@@ -81,18 +81,15 @@
       <DependentUpon>201909120009075_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\Products\Premium.cs" />
-    <Compile Include="Models\Products\Standout.cs" />
-    <Compile Include="Models\Products\Classic.cs" />
-    <Compile Include="Models\Products\Product.cs" />
+    <Compile Include="Models\Product.cs" />
     <Compile Include="Repositories\IProductRepository.cs" />
     <Compile Include="Data\AppJsonContext.cs" />
-    <Compile Include="Models\SpecialPricingRule\BuyXGetYFree2.cs" />
-    <Compile Include="Models\SpecialPricingRule\Interfaces\IPricingRulesRepository.cs" />
-    <Compile Include="Models\SpecialPricingRule\Interfaces\ISpecialPricingRule.cs" />
-    <Compile Include="Models\SpecialPricingRule\Interfaces\IpricingRulesService.cs" />
-    <Compile Include="Models\SpecialPricingRule\Repository\PricingRulesRepository.cs" />
-    <Compile Include="Models\SpecialPricingRule\PricingRulesService.cs" />
+    <Compile Include="Models\SPRBuyXGetYFree2.cs" />
+    <Compile Include="Repositories\IPricingRulesRepository.cs" />
+    <Compile Include="Repositories\SQLPricingRulesRepository.cs" />
+    <Compile Include="Services\IpricingRulesService.cs" />
+    <Compile Include="Repositories\JsonPricingRulesRepository.cs" />
+    <Compile Include="Services\PricingRulesService.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -100,9 +97,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="Models\SpecialPricingRule\QuantityDiscount.cs" />
-    <Compile Include="Models\SpecialPricingRule\BuyXGetYFree.cs" />
-    <Compile Include="Models\SpecialPricingRule\SpecialPricingRule.cs" />
+    <Compile Include="Models\SPRQuantityDiscount.cs" />
+    <Compile Include="Models\SPRBuyXGetYFree.cs" />
+    <Compile Include="Models\SPR.cs" />
     <Compile Include="Repositories\SQLProductRepository.cs" />
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Repositories\JsonProductRepository.cs" />
@@ -125,5 +122,6 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
