--- a/JobAdsCheckoutSystem/App.config
+++ b/JobAdsCheckoutSystem/App.config
@@ -15,6 +15,6 @@
     </assemblyBinding>
   </runtime>
 	<connectionStrings>
-		<add name="JobAdsCheckoutSystemDB" connectionString="Data Source=.;Initial Catalog=JobAdsCheckoutSystemDB;Integrated Security=True;Pooling=False" provIderName="System.data.SQLClient" />
+		<add name="JobAdsCheckoutSystemDB" connectionString="Data Source=.;Initial Catalog=JobAdsCheckoutSystemDB;Integrated Security=True;Pooling=False" providerName="System.data.SQLClient" />
 	</connectionStrings>
 </configuration>
